# dongxuan_agent

./: bazi_prompt.md  bazi_session.py  daliuren_prompt.md  daliuren_session.py  pyproject.toml  tools_bazi_chart_wrapper.py  tools_bazi_session_wrapper.py  tools_daliuren_chart_wrapper.py  tools_daliuren_session_wrapper.py
docs/superpowers/plans/: 2026-05-26-bazi-year-event-analysis.md  2026-05-28-bazi-cross-discipline-imagery.md
docs/superpowers/specs/: 2026-05-28-bazi-humanities-imagery-design.md
dongxuan_agent/: __init__.py  bazi.py  bazi_analysis.py  bazi_cli.py  bazi_climate.py  bazi_god.py  bazi_imagery.py  bazi_integration.py  bazi_luck_remedy.py  bazi_pattern.py  bazi_remedy.py  bazi_rule_cards.py  bazi_strength.py  calendar_engine.py  chart.py  cli.py  constants.py  divination.py  render.py  rule_cards.py  season.py  spirits.py  transmissions.py  xun.py
dongxuan_agent/bazi/: __init__.py  chart.py  climate.py  context.py  discipline.py  imagery.py  integration.py  luck_remedy.py  pattern.py  remedy.py  rule_cards.py  spirits.py  strength.py  year.py
tests/: test_bazi.py  test_bazi_analysis.py  test_bazi_cli.py  test_bazi_context.py  test_bazi_discipline.py  test_bazi_imagery.py  test_bazi_integration.py  test_bazi_pattern.py  test_bazi_prompt_policy.py  test_bazi_remedy_god_luck.py  test_bazi_rule_cards.py  test_bazi_session.py  test_bazi_spirits.py  test_bazi_strength_climate.py  test_calendar_engine.py  test_chart.py  test_cli.py  test_prompt_policy.py  test_render.py  test_rule_cards.py  test_session.py
