[project]
name = "dongxuan-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["sxtwl"]

[project.scripts]
daliuren-chart = "dongxuan_agent.cli:main"
bazi-chart = "dongxuan_agent.bazi_cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
